--- a/package.json
+++ b/package.json
@@ -11,13 +11,25 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.0",
+    "@angular/cdk": "^12.2.13",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
+    "@angular/material": "^12.2.13",
+    "@angular/material-moment-adapter": "^12.2.13",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@fullcalendar/angular": "^5.10.2",
+    "@fullcalendar/core": "^5.10.1",
+    "@fullcalendar/daygrid": "^5.10.1",
+    "@fullcalendar/resource-timeline": "^5.10.1",
+    "dragula": "^3.7.3",
+    "fullcalendar": "^4.0.0-alpha.4",
+    "fullcalendar-scheduler": "^4.0.0-alpha.4",
+    "moment": "^2.29.1",
+    "ngx-fullcalendar": "^5.0.0-alpha.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
