--- a/package.json
+++ b/package.json
@@ -24,12 +24,10 @@
     "@fullcalendar/angular": "^5.10.2",
     "@fullcalendar/core": "^5.10.1",
     "@fullcalendar/daygrid": "^5.10.1",
-    "@fullcalendar/resource-timeline": "^5.10.1",
-    "dragula": "^3.7.3",
-    "fullcalendar": "^4.0.0-alpha.4",
-    "fullcalendar-scheduler": "^4.0.0-alpha.4",
+    "@fullcalendar/interaction": "^5.10.1",
+    "@fullcalendar/list": "^5.10.1",
+    "@fullcalendar/timegrid": "^5.10.1",
     "moment": "^2.29.1",
-    "ngx-fullcalendar": "^5.0.0-alpha.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
